--- a/lab4/Shapes/Shapes.vcxproj
+++ b/lab4/Shapes/Shapes.vcxproj
@@ -133,12 +133,14 @@
   <ItemGroup>
     <ClCompile Include="Shapes.cpp" />
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="Storage.cpp" />
     <ClCompile Include="Task.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shapes.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Storage.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Shapes.rc" />
