--- a/lab4/Shapes/Shapes.vcxproj.filters
+++ b/lab4/Shapes/Shapes.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="CCircle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CStorage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CCircle.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CRectangle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CStorage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
