--- a/lab7/FindMaxTest/FindMaxTest.vcxproj
+++ b/lab7/FindMaxTest/FindMaxTest.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{f44bca58-a975-4be6-871a-bb9ff9cc99d1}</ProjectGuid>
-    <RootNamespace>FindMax</RootNamespace>
+    <ProjectGuid>{4283ac1f-4fef-4f65-84dc-3c9bb59de4d3}</ProjectGuid>
+    <RootNamespace>FindMaxTest</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,10 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="FindMax.cpp" />
+    <ClCompile Include="FindMaxTest.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="FindMaxT.h" />
+    <ClInclude Include="..\FindMax\FindMaxT.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
